<resources>
    <string name="app_name">EmployeeApp</string>

    <!-- Strings voor MainActivity -->
    <string name="order_app_logo">
        Kassa-app
    </string>
    <string name="employee_main_title">
        Medewerker App
    </string>
    <string name="email">
        E-mail:
    </string>
    <string name="hint_enter_email">
        example123@mail.com
    </string>
    <string name="password">
        Wachtwoord:
    </string>
    <string name="hint_enter_password">
        ***********
    </string>
    <string name="log_in_button">
        Inloggen
    </string>
    <string name="successful_log_in_toast">
        Succesvol ingelogd.
    </string>
    <string name="failed_log_in_no_employee_toast">
        Dit is geen medewerkers account. Kan niet inloggen.
    </string>
    <string name="account_not_found_toast">
        Account niet gevonden.
    </string>

    <!-- Strings voor HandleOrderActivity -->
    <string name="accept_button">
        Accepteer bestelling
    </string>

    <!-- Strings voor HomeScreenActivity -->
    <string name="stock_button">
        Assortiment aanpassen
    </string>
    <string name="employee_home_title">
        Menu
    </string>
    <string name="search_order_button">
        Bestellingen zoeken
    </string>
    <string name="scan_button">
        Scannen
    </string>
    <string name="add_products_button">
        Voeg producten toe
    </string>

    <!-- Strings voor SearchOrderActivity-->
    <string name="search_order_edit_text_hint">
        E-mailadres...
    </string>
    <string name="search_order_history_button">
        Zoek
    </string>

    <!-- Strings voor OrderActivity -->
    <string name="total_textview">
        Totaal:
    </string>
    <string name="total_price_textview">
        €0,00
    </string>
    <string name="order_activity_orderButton">
        Bestellen
    </string>

    <!-- Strings voor de toolbar -->
    <string name="Home_Screen_toolbar">Menu</string>
    <string name="order_toolbar">Bestellen</string>
    <string name="Order_Detail_toolbar">Huidige Bestelling</string>
    <string name="Scan_toolbar">Betalen</string>
    <string name="Order_History_toolbar">Mijn Bestellingen</string>
    <string name="Settings_toolbar">Instellingen</string>
    <string name="search_order_toolbar">Zoek naar bestelling</string>
    <string name="Unhandled_Order_toolbar">Open Bestelling</string>
    <string name="employee_stock_activity">Assortiment aanpassen</string>
    <string name="employee_add_stock_product_activity">Product toevoegen</string>
    <string name="employee_remove_stock_product_activity">Product verwijderen</string>

    <!-- Stock activity -->
    <string name="button_add_product">Product toevoegen</string>
    <string name="button_remove_product">Product Verwijderen</string>

    <!-- Add Stock -->
    <string name="add_stock_productId_label">ProductID: </string>
    <string name="add_stock_productId_hint">ProductID</string>

    <string name="add_stock_category_label">Categorie: </string>
    <string name="add_stock_category_hint">Categorie</string>

    <string name="add_stock_name_label">Product: </string>
    <string name="add_stock_name_hint">Product</string>

    <string name="add_stock_instock_label">Op voorraad: </string>
    <string name="add_stock_instock_hint">Ja / Nee</string>

    <string name="add_stock_price_label">Prijs: </string>
    <string name="add_stock_price_hint">€0,00</string>

    <string name="add_stock_nameEng_label">Naam(en): </string>
    <string name="add_stock_nameEng_hint">name</string>

    <string name="add_stock_categoryEng_label">Categorie(en): </string>
    <string name="add_stock_categoryEng_hint">Category</string>

    <string name="add_stock_button">Toevoegen</string>

</resources>
