<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context="com.periode4groep2.employeeapp.PresentationLayer.AddStockProduct">

    <include
        android:id="@+id/tool_bar_no_button"
        layout="@layout/tool_bar_no_button">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_productId_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_productID"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_productId_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_category_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_category"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_category_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_name_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_product"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_name_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_instock_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_instock"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_instock_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_price_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_price"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_price_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_nameEng_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_nameEng"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_nameEng_hint"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_stock_categoryEng_label"
                android:paddingLeft="20dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:id="@+id/stock_add_product_categoryEng"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@color/colorWhite"
                android:hint="@string/add_stock_categoryEng_hint"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/stock_add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_stock_button"
            android:background="@color/colorOrange"
            android:layout_gravity="center"
            android:padding="20dp"/>

    </FrameLayout>

</LinearLayout>
