<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOrange"
    tools:context="com.periode4groep2.employeeapp.PresentationLayer.HomeScreenActivity">

    <include
        android:id="@+id/tool_bar_no_button"
        layout="@layout/tool_bar_no_button">
    </include>

    <LinearLayout
        android:id="@+id/scanOrderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_scanner"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/scan_button"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="7dp"
        android:id="@+id/searchOrderView"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_search"
            android:background="@color/colorBackground"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/search_order_button"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20dp"
            android:layout_weight="2"
            android:background="@color/colorBackground"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:id="@+id/stockView"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_edit"
            android:background="@color/colorBackground"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:text="@string/stock_button"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20dp"
            android:layout_weight="2"
            android:background="@color/colorBackground"
            />
    </LinearLayout>


</LinearLayout>
