<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.periode4groep2.employeeapp.PresentationLayer.AddExtraProducts">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ExpandableListView
            android:id="@+id/expandableListId"
            android:background="@color/colorBackground"
            android:layout_width="match_parent"
            android:groupIndicator="@null"
            android:layout_height="match_parent">
        </ExpandableListView>
        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true">

            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circle"
                android:src="@drawable/icon_bestellen"
                android:id="@+id/popUpButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"/>

            <RelativeLayout
                android:layout_width="40dp"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/colorOrderRed"/>
                <TextView
                    android:id="@+id/itemCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    />
            </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOrange"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/total_textview"
                android:textSize="25dp"
                android:paddingLeft="3dp"
                android:gravity="center_vertical"/>
            <TextView
                android:id="@+id/totalOrderPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/total_price_textview"
                android:textSize="25dp"
                android:gravity="center_vertical"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/order_activity_orderButton"
            android:gravity="center"
            android:textSize="25dp"
            />

    </LinearLayout>



</LinearLayout>
